# SYCL-Building-Blocks

./: .gitignore  CMakeLists.txt  README.md  cooperative_groups.hpp  intrinsics.hpp
benchmarks/: CMakeLists.txt  benchmark_array_register.cpp  benchmark_bit_array.cpp  benchmark_byte_array.cpp  benchmark_local_alignement.cpp  benchmark_reduce.cpp  benchmark_scan.cpp
cmake/: FindSYCL.cmake
cmake/Modules/: ComputeCppCompilerChecks.cmake  FindComputeCpp.cmake  FindTriSYCL.cmake
examples/: CMakeLists.txt  main.cpp
include/: cooperative_groups.hpp  intrinsics.hpp  local_mem_alignement_checker.hpp  queue_helpers.hpp  register_bit_array.hpp  runtime_byte_array.hpp  runtime_index_wrapper.h  runtime_index_wrapper.hpp  usm_smart_ptr.hpp  utils.h  utils.hpp
include/parallel_primitives/: common.h  reduction.hpp  scan.hpp  scan_cooperative.hpp  scan_decoupled_lookback.hpp
include/parallel_primitives/internal/: common.h  partition_descriptor.h
parallel_primitives/: common.h  reduction.hpp  scan.hpp  scan_cooperative.hpp
tests/: CMakeLists.txt  test_alignement.cpp  test_cooperative_groups.cpp  test_intrinsics.cpp  test_pointers.cpp  test_queue_helpers.cpp  test_reduction.cpp  test_runtime_index_wrapper.cpp  test_scan.cpp
