add_executable(benchmark_scan benchmarks/benchmark_scan.cpp)
target_link_libraries(benchmark_scan PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_scan SOURCES benchmarks/benchmark_scan.cpp)

add_executable(benchmark_reduce benchmarks/benchmark_reduce.cpp)
target_link_libraries(benchmark_reduce PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_reduce SOURCES benchmarks/benchmark_reduce.cpp)

add_executable(benchmark_alignement benchmarks/benchmark_local_alignement.cpp)
target_link_libraries(benchmark_alignement PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_alignement SOURCES benchmarks/benchmark_local_alignement.cpp)

add_executable(benchmark_registers benchmarks/benchmark_array_register.cpp)
target_link_libraries(benchmark_registers PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_registers SOURCES benchmarks/benchmark_array_register.cpp)

add_executable(benchmark_byte_array benchmarks/benchmark_byte_array.cpp)
target_link_libraries(benchmark_byte_array PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_byte_array SOURCES benchmarks/benchmark_byte_array.cpp)

add_executable(benchmark_bit_array benchmarks/benchmark_bit_array.cpp)
target_link_libraries(benchmark_bit_array PRIVATE benchmark::benchmark)
add_sycl_to_target(TARGET benchmark_bit_array SOURCESbenchmarks/ benchmark_bit_array.cpp)


